--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -36,25 +36,21 @@
       </div>
     </nav>
     <section id="profile">
-      <div class="section__pic-container">
-        <img
-          src="./assets/profile-pic-3.png"
-          alt="Shubham petwal"
-          class="shubham"
-        />
+      <div class="section__pic-container first-pic">
+        <img src="./assets/shubham1.png" alt="Shubham petwal" class="shubham" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Shubham Petwal</h1>
-        <p class="section__text__p2">Language expert</p>
+        <p class="section__text__p2">Italian language expert</p>
         <div class="btn-container">
           <button
             class="btn btn-color2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./comingsoon.html')"
           >
             Download CV
           </button>
-          <button class="btn btn-color1" onclick="location.href='./#contact'">
+          <button class="btn btn-color1" onclick="location.href = './#contact'">
             Contact me
           </button>
         </div>
@@ -63,13 +59,16 @@
             src="./assets/linkedin.png"
             alt="My linkedin"
             class="icon"
-            onclick="location.href=' https://linkedin.com/'"
+            onclick="
+              location.href =
+                'https://www.linkedin.com/in/shubham-petwal-aa15a5253/'
+            "
           />
           <img
             src="./assets/github.png"
             alt="My github"
             class="icon"
-            onclick="location.href=' https://github.com/'"
+            onclick="location.href = 'https://github.com/shubham05055'"
           />
         </div>
       </div>
@@ -80,7 +79,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/shubham.jpeg"
+            src="./assets/profile-pic-4.png"
             alt="profile picture"
             class="about-pic"
           />
@@ -110,10 +109,21 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam
-              error nihil dignissimos at inventore ex consectetur quidem, quae
-              harum praesentium atque natus ea dolores incidunt ipsa eveniet
-              odit, delectus repellat!
+              I’m a B.A. Hons (Italian) student with strong communication skills
+              in Italian (B2 level), with 3+ years of consistent learning and
+              practical language use. I have a solid command of Hindi (native)
+              and English, which helps me communicate confidently across
+              different environments. Along with my language expertise, I
+              possess strong technical proficiency in MS PowerPoint and Advanced
+              Excel, allowing me to create well-structured presentations, manage
+              data efficiently, and support academic or professional tasks. In
+              addition, I am currently learning frontend development (HTML, CSS,
+              JavaScript, and React fundamentals) to build clean, responsive,
+              and user-friendly websites. I am a motivated and detail-oriented
+              individual who enjoys combining language skills with creativity
+              and technology. I am always focused on continuous improvement,
+              expanding my knowledge, and developing new skills to grow
+              professionally.
             </p>
           </div>
         </div>
@@ -122,19 +132,324 @@
         src="./assets/arrow.png"
         alt="arrow icon"
         class="icon arrow"
-        onclick="location.href='#skills'"
+        onclick="location.href = '#skills'"
       />
     </section>
-    <section id="Skills">
+    <section id="skills">
       <p class="section__text__p1">Explore my</p>
       <h1 class="title">Skills</h1>
-      <div class="article-container">
-        <article>
-          <img src="./assets/checkmark.png" alt="skills icon" class="icon" />
-          <div><h3>HTML</h3> <p>experienced</p></div>
-        </article>
+      <div class="skills-details-container">
+        <div class="about-containers">
+          <div class="details-container">
+            <h2 class="skills-sub-title">Language skills</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="checkmark"
+                  class="icon"
+                />
+                <div>
+                  <h3>Hindi</h3>
+                  <p>Native language</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="checkmark"
+                  class="icon"
+                />
+                <div>
+                  <h3>English</h3>
+                  <p>Well-Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="checkmark"
+                  class="icon"
+                />
+                <div>
+                  <h3>Italian</h3>
+                  <p>B2-level - 3+yrs</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="checkmark"
+                  class="icon"
+                />
+                <div>
+                  <h3>+</h3>
+                  <p>Indian dailects</p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="details-container">
+            <h2 class="skills-sub-title">Technical skills</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="checkmark"
+                  class="icon"
+                />
+                <div>
+                  <h3>Ms Powerpoint</h3>
+                  <p>Expert - 3+ years</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="checkmark"
+                  class="icon"
+                />
+                <div>
+                  <h3>Advanced Excel</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="checkmark"
+                  class="icon"
+                />
+                <div>
+                  <h3>CORELDRAW</h3>
+                  <p>Experienced - 2+ years</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="checkmark"
+                  class="icon"
+                />
+                <div>
+                  <h3>Photoshop</h3>
+                  <p>Intermediate - 1+ year</p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <div class="details-container">
+            <h2 class="skills-sub-title">Frontend Development</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="checkmark"
+                  class="icon"
+                />
+                <div>
+                  <h3>HTML</h3>
+                  <p>Well Experienced - 2+ years</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="checkmark"
+                  class="icon"
+                />
+                <div>
+                  <h3>CSS</h3>
+                  <p>Intermediate - 2+ years</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="checkmark"
+                  class="icon"
+                />
+                <div>
+                  <h3>JAVASCRIPT</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="checkmark"
+                  class="icon"
+                />
+                <div>
+                  <h3>React JS</h3>
+                  <p>Fundamentals of react</p>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+        <p>
+          I hereby declare that the above-mentioned skills are true and correct
+          to the best of my knowledge. They are based on my learning,
+          experience, and continuous practice. I am committed to improving and
+          upgrading my skills regularly. Always open to learning new tools and
+          technologies.
+        </p>
       </div>
+      <img
+        src="./assets/arrow.png"
+        alt="arrow icon"
+        class="icon arrow"
+        onclick="location.href = '#projects'"
+      />
+      <img
+        src="./assets/home.png"
+        alt="arrow icon"
+        class="icon arrow2"
+        onclick="location.href = '#about'"
+      />
     </section>
+    <section id="projects">
+      <p class="section__text__p1">Browse my recent</p>
+      <h1 class="title">Projects</h1>
+      <div class="skills-details-container">
+        <div class="about-containers">
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">My designs</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color2 project-btn"
+                onclick="location.href = 'comingsoon.html'"
+              >
+                File
+              </button>
+              <button
+                class="btn btn-color2 project-btn"
+                onclick="location.href = 'comingsoon.html'"
+              >
+                Git
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-2.png"
+                alt="Project 2"
+                class="project-img"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">My presentations</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color2 project-btn"
+                onclick="location.href = 'Comingsoon.html'"
+              >
+                File
+              </button>
+              <button
+                class="btn btn-color2 project-btn"
+                onclick="location.href = 'Comingsoon.html'"
+              >
+                Git
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-3.png"
+                alt="Project 3"
+                class="project-img"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Web pages</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color2 project-btn"
+                onclick="location.href = 'comingsoon.html'"
+              >
+                File
+              </button>
+              <button
+                class="btn btn-color2 project-btn"
+                onclick="location.href = 'comingsoon.html'"
+              >
+                Git
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="arrow icon"
+        class="icon arrow"
+        onclick="location.href = '#contact'"
+      />
+      <img
+        src="./assets/home.png"
+        alt="arrow icon"
+        class="icon arrow2"
+        onclick="location.href = '#about'"
+      />
+    </section>
+    <section id="contact">
+      <p class="section__text__p1">Get in Touch</p>
+      <h1 class="title">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/email.png"
+            alt="email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p>
+            <a href="mailto:Shubhampetwal53@gmail.com"
+              >Shubhampetwal53@gmail.com</a
+            >
+          </p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="linkedIn icon"
+            class="icon contact-icon"
+          />
+          <p>
+            <a href="https://www.linkedin.com/in/shubham-petwal-aa15a5253/"
+              >linkedIn</a
+            >
+          </p>
+        </div>
+      </div>
+      <!-- <img
+        src="./assets/home.png"
+        alt="arrow icon"
+        class="icon arrow"
+        onclick="location.href='#hamburger-nav'"
+      /> -->
+    </section>
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about"> About </a></li>
+            <li><a href="#skills"> Skills </a></li>
+            <li><a href="#projects"> Projects </a></li>
+            <li><a href="#contact"> Contact </a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2026 Shubham Petwal. All rights reserved.</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
