--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
     <footer>
       <nav>
         <div class="nav-links-container">
-          <ul class="nav-links">
+          <ul class="nav-links footer-navbar">
             <li><a href="#about"> About </a></li>
             <li><a href="#skills"> Skills </a></li>
             <li><a href="#projects"> Projects </a></li>
