--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color2"
-            onclick="window.open('./comingsoon.html')"
+            onclick="window.open('https://grub-crow-86749908.figma.site/')"
           >
             Download CV
           </button>
