--- a/Design.html
+++ b/Design.html
@@ -6,8 +6,6 @@
   <title>My Designs</title>
 
   <style>
-    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
-    
     *{
       margin: 0;
       padding: 0;
@@ -17,18 +15,18 @@
 
     body{
       background: #f7f7f7;
-      padding: 30px 20px;
+      padding: 30px 15px;
     }
 
     header{
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 25px;
     }
 
     header h1{
-      font-size: 40px;
+      font-size: 42px;
       color: #b30000;
-      margin-bottom: 10px;
+      margin-bottom: 8px;
     }
 
     header p{
@@ -53,71 +51,111 @@
       color: white;
     }
 
-    .container{
-      max-width: 1100px;
-      margin: auto;
-    }
-
-    .grid{
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
-    }
-
-    .card{
+    .carousel{
+      max-width: 900px;
+      margin: 30px auto;
       background: white;
+      border-radius: 20px;
+      padding: 18px;
+      box-shadow: 0px 5px 18px rgba(0,0,0,0.08);
+    }
+
+    .slider{
+      position: relative;
+      overflow: hidden;
       border-radius: 18px;
-      padding: 15px;
-      box-shadow: 0px 5px 15px rgba(0,0,0,0.08);
-      transition: 0.3s;
-    }
-
-    .card:hover{
-      transform: translateY(-6px);
-    }
-
-    .card img{
-      width: 100%;
-      height: 170px;
-      object-fit: cover;
-      border-radius: 14px;
       border: 1px solid #eee;
     }
 
-    .card h3{
-      margin: 12px 0 5px;
+    .slides{
+      display: flex;
+      transition: transform 0.4s ease;
+    }
+
+    .slides img{
+      width: 100%;
+      height: 420px;
+      object-fit: cover;
+      flex-shrink: 0;
+    }
+
+    /* Buttons */
+    .nav-btn{
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background: rgba(0,0,0,0.55);
+      color: white;
+      border: none;
+      padding: 10px 14px;
+      cursor: pointer;
+      border-radius: 50%;
+      font-size: 18px;
+      transition: 0.2s;
+    }
+
+    .nav-btn:hover{
+      background: rgba(0,0,0,0.8);
+    }
+
+    .prev{ left: 12px; }
+    .next{ right: 12px; }
+
+    /* Info area */
+    .info{
+      margin-top: 15px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .info h2{
       font-size: 18px;
       color: #111;
     }
 
-    .card p{
-      font-size: 13px;
-      color: #666;
-      margin-bottom: 12px;
-    }
-
-    .btns{
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-    }
-
-    .btn{
-      flex: 1;
-      text-align: center;
-      padding: 10px;
+    .download-btn{
+      padding: 10px 18px;
       border-radius: 20px;
       border: 1px solid #333;
-      text-decoration: none;
-      font-size: 13px;
-      color: #111;
+      background: transparent;
+      cursor: pointer;
+      transition: 0.3s;
+      font-size: 14px;
+    }
+
+    .download-btn:hover{
+      background: #111;
+      color: white;
+    }
+
+    /* Dots */
+    .dots{
+      display: flex;
+      justify-content: center;
+      gap: 8px;
+      margin-top: 12px;
+    }
+
+    .dot{
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      background: #ccc;
+      cursor: pointer;
       transition: 0.3s;
     }
 
-    .btn:hover{
-      background: #111;
-      color: white;
+    .dot.active{
+      background: #b30000;
+      transform: scale(1.2);
+    }
+
+    @media(max-width: 600px){
+      header h1{ font-size: 32px; }
+      .slides img{ height: 280px; }
     }
   </style>
 </head>
@@ -126,61 +164,98 @@
 
   <header>
     <h1>My Designs</h1>
-    <p>Here are some of my recent design works like banners, logos, posters & thumbnails.</p>
+    <p>Swipe through my design work (logos, posters, banners, thumbnails).<br> These previews are not uploaded at their highest quality due to availability of devices. (these are the assignment work done.. hence, theirs highest quality image is not available)</p>
 
-    <!-- Change projects.html to your home page name -->
-    <a href="index.html#projects" class="back-btn">⬅ Back to Projects</a>
+    <!-- change index.html if your home page is different -->
+    <a href="index.html#projects" class="back-btn">⬅ Back</a>
   </header>
 
-  <div class="container">
-    <div class="grid">
+  <div class="carousel">
 
-      <!-- CARD 1 -->
-      <div class="card">
-        <img src="images/design1.jpg" alt="Design 1">
-        <h3>Logo Design</h3>
-        <p>Tools: CorelDraw, Photoshop</p>
-        <div class="btns">
-          <a href="images/design1.jpg" target="_blank" class="btn">View Full</a>
-          <a href="images/design1.jpg" download class="btn">Download</a>
-        </div>
+    <div class="slider">
+      <div class="slides" id="slides">
+        <!-- Put your images here -->
+        <img src="assets/Project-1a.png" alt="Design 1">
+        <img src="assets/Project-1b.png" alt="Design 2">
+        <img src="assets/Project-1c.png" alt="Design 3">
+        <img src="assets/Project-1d.png" alt="Design 4">
       </div>
 
-      <!-- CARD 2 -->
-      <div class="card">
-        <img src="assets/Project-1.png" alt="Design 2">
-        <h3>Poster Design</h3>
-        <p>Tools: Photoshop</p>
-        <div class="btns">
-          <a href="" target="_blank" class="btn">View Full</a>
-          <a href="images/design2.jpg" download class="btn">Download</a>
-        </div>
-      </div>
-
-      <!-- CARD 3 -->
-      <div class="card">
-        <img src="images/design3.jpg" alt="Design 3">
-        <h3>Banner Design</h3>
-        <p>Tools: Canva / Photoshop</p>
-        <div class="btns">
-          <a href="images/design3.jpg" target="_blank" class="btn">View Full</a>
-          <a href="images/design3.jpg" download class="btn">Download</a>
-        </div>
-      </div>
-
-      <!-- CARD 4 -->
-      <div class="card">
-        <img src="images/design4.jpg" alt="Design 4">
-        <h3>Thumbnail Design</h3>
-        <p>Tools: Photoshop</p>
-        <div class="btns">
-          <a href="images/design4.jpg" target="_blank" class="btn">View Full</a>
-          <a href="images/design4.jpg" download class="btn">Download</a>
-        </div>
-      </div>
-
+      <button class="nav-btn prev" onclick="prevSlide()">❮</button>
+      <button class="nav-btn next" onclick="nextSlide()">❯</button>
     </div>
+
+    <div class="info">
+      <h2 id="title">Design 1</h2>
+      <button class="download-btn" onclick="downloadCurrent()">⬇ Download</button>
+    </div>
+
+    <div class="dots" id="dots"></div>
   </div>
+
+  <script>
+    const slides = document.getElementById("slides");
+    const title = document.getElementById("title");
+    const dotsContainer = document.getElementById("dots");
+
+    // Add your titles here (same order as images)
+    const slideTitles = ["Certificate Design", "Logo Design", "Banner Design", "Poster Design"];
+
+    // Add your image paths here (same order)
+    const slideImages = [
+      "assets/Project-1a.png",
+      "assets/Project-1b.png",
+      "assets/Project-1c.png",
+      "assets/Project-1d.png"
+    ];
+
+    let index = 0;
+
+    // Create dots
+    slideImages.forEach((_, i) => {
+      const dot = document.createElement("div");
+      dot.classList.add("dot");
+      dot.addEventListener("click", () => goToSlide(i));
+      dotsContainer.appendChild(dot);
+    });
+
+    function updateCarousel() {
+      slides.style.transform = `translateX(-${index * 100}%)`;
+      title.textContent = slideTitles[index];
+
+      // Update dots
+      document.querySelectorAll(".dot").forEach((dot, i) => {
+        dot.classList.toggle("active", i === index);
+      });
+    }
+
+    function nextSlide() {
+      index = (index + 1) % slideImages.length;
+      updateCarousel();
+    }
+
+    function prevSlide() {
+      index = (index - 1 + slideImages.length) % slideImages.length;
+      updateCarousel();
+    }
+
+    function goToSlide(i) {
+      index = i;
+      updateCarousel();
+    }
+
+    function downloadCurrent() {
+      const link = document.createElement("a");
+      link.href = slideImages[index];
+      link.download = slideImages[index].split("/").pop(); // file name
+      link.click();
+    }
+
+    // Auto slide (optional)
+    setInterval(nextSlide, 5500);
+
+    updateCarousel();
+  </script>
 
 </body>
 </html>
