--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color2 project-btn"
-                onclick="location.href = 'comingsoon.html'"
+                onclick="location.href = 'Design.html'"
               >
                 See more...
               </button>
