--- a/Design.html
+++ b/Design.html
@@ -6,14 +6,17 @@
   <title>My Designs</title>
 
   <style>
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
     *{
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: Arial, Helvetica, sans-serif;
+      
     }
 
     body{
+      font-family: "Poppins", sans-serif;
       background: #f7f7f7;
       padding: 30px 15px;
     }
