--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color2 project-btn"
-                onclick="location.href = 'Comingsoon.html'"
+                onclick="location.href = 'presentations.html'"
               >
                 See more...
               </button>
