--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color2 project-btn"
-                onclick="location.href = 'comingsoon.html'"
+                onclick="location.href = 'https://github.com/shubham05055?tab=repositories'"
               >
                 See more...
               </button>
