corrected minor spelling mistake

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </div>
           <div class="text-container">
             <p>
-              Here’s a **100-word version**: I’m a B.A. Hons (Italian) student
+              I’m a B.A. Hons (Italian) student
               with strong communication skills in Italian (B2 level) and 3+
               years of consistent learning and practical language use. I also
               have a solid command of Hindi (native) and English, enabling
