--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color2"
-            onclick="window.open('https://grub-crow-86749908.figma.site/')"
+            onclick="window.open('/assets/Shubham Petwal resume.pdf')"
           >
             Download CV
           </button>
